apps/ufc-dashboard/envs/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ufc-dashboard
  namespace: ufc-dashboard
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: app
          image: ghcr.io/wlodzimierrr/ufc-dashboard:sha-ece805a4559b051e20dfb68fa5459b445d70595b
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
